--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,17 +1,18 @@
 .wrapped {
   border: 1px solid black;
   background-color: rgb(233, 221, 253);
-  padding: 10rem;
+  padding: 5rem 2rem;
   width: 100%;
   section {
     border-top: 1px solid rgb(185, 183, 183);
     border-bottom: 1px solid rgb(185, 185, 185);
+    width: 90%;
     display: grid;
     grid-template-columns: repeat(4, 2fr);
     text-align: left;
-    padding: 2rem;
+    padding: 2rem 1rem;
     & > div {
-      margin: 0 2rem 0 0.3rem;
+      margin: 0 2rem;
     }
     .ft-socials {
       ul {
