--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -40,13 +40,29 @@
   }
 }
 
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 700px) {
   .services {
     padding: 10rem 0 2rem 5rem;
-  }
-  .title {
-    h1 {
-      font-size: 3rem;
+    .title {
+      h1 {
+        font-size: 2.5rem;
+      }
+    }
+    .content {
+      section {
+        margin-right: 0;
+        margin-bottom: 0;
+        padding: 0;
+        img {
+          width: 15px;
+        }
+        .text {
+          margin-left: 14px;
+          line-height: 1.5;
+          font-size: 6px;
+          margin-top: 2px;
+        }
+      }
     }
   }
 }
