--- a/src/styles/team.scss
+++ b/src/styles/team.scss
@@ -1,4 +1,4 @@
-.wrapper {
+.team {
   padding-top: 10rem;
   display: flex;
   flex-direction: column;
@@ -78,7 +78,8 @@
         background-color: #516395;
         width: 300px;
       }
-      .info {
+      .info,
+      .info1 {
         position: relative;
         top: -13rem;
         left: 6.5rem;
@@ -149,6 +150,7 @@
         padding-left: 1rem;
         margin-left: -1rem;
         border: 3px solid #502eff;
+        outline: none;
         &::placeholder {
           color: #502eff;
         }
@@ -159,13 +161,129 @@
         border-radius: 30px;
         background-color: #502eff;
         color: #f4f4f4;
+        box-shadow: none;
+        outline: none;
+        border: none;
       }
     }
   }
 }
-
-@media screen and (max-width: 1020px) {
-  .wrapper {
+// @media screen and (max-width: 450px) {
+//   .team {
+//     .images {
+//       .person1,
+//       .person2 {
+//         width: 80px;
+//         img {
+//           left: -2.3rem;
+//         }
+//       }
+//       .person3 {
+//         width: 90px;
+//       }
+//     }
+//   }
+// }
+@media screen and (max-width: 700px) {
+  .team {
     width: 100%;
+    padding-top: 0;
+    .headings {
+      h4 {
+        font-size: 10px;
+      }
+      h2 {
+        width: 20rem;
+        font-size: 1.4rem;
+      }
+    }
+    .bg-images .dot {
+      top: 14px;
+      left: 6rem;
+    }
+    .images {
+      .wrap {
+        .person1,
+        .person2,
+        .person3 {
+          margin: 0 1.5rem;
+          height: 120px;
+          top: -3.12rem;
+          img {
+            width: 170px;
+            left: -2.9rem;
+            top: 0.4rem;
+          }
+        }
+        .person1 {
+          width: 70px;
+          left: 1rem;
+          img {
+            top: 0.8rem;
+          }
+        }
+        .person2 {
+          width: 70px;
+          left: -0rem;
+        }
+        .person3 {
+          width: 70px;
+          left: -0.4rem;
+        }
+        .info {
+          top: -3rem;
+          font-size: 5px;
+          left: 0;
+          width: 100px;
+          h3 {
+            width: 90px;
+          }
+          p {
+            margin: 0;
+            font-size: 8px;
+            width: 120px;
+          }
+          ul {
+            li {
+              margin: 10px;
+            }
+          }
+        }
+      }
+    }
+    // info adjust of person1
+    .ph3 {
+      margin-left: 1rem !important;
+    }
+    .btn {
+      margin: -5rem auto;
+      width: 150px;
+      height: 40px;
+    }
+    .contact {
+      width: 100%;
+      padding: 0 1rem;
+      margin: 10rem -1rem;
+      h4 {
+        font-size: 10px;
+      }
+      h2 {
+        font-size: 1.3rem;
+      }
+      .msg {
+        input {
+          width: 170px;
+          height: 30px;
+          margin: 1rem;
+        }
+        button {
+          width: 70px;
+          height: 30px;
+          box-shadow: none;
+          outline: none;
+          border: none;
+        }
+      }
+    }
   }
 }
